--- a/site/layouts/project/single.html
+++ b/site/layouts/project/single.html
@@ -179,6 +179,16 @@ Your browser does not support the video tag.
       font-style: italic;
       text-align: center;
     }
+
+    #two #note {
+      background-color: #f7a100;
+      border: 1px solid black;
+      border-radius: 4px;
+      padding-left: 5px;
+      padding-right: 5px;
+      font-weight: bold;
+      color: black;
+    }
   </style>
 
   {{ "<!-- Scripts -->" | safeHTML}} {{ partial "js.html" . }}
