--- a/site/layouts/page/single.html
+++ b/site/layouts/page/single.html
@@ -13,7 +13,7 @@
     {{ "<!-- Main -->" | safeHTML }}
     <div id="main" class="alt">
 
-      <!-- One -->
+      {{ "<!-- One -->" | safeHTML }}
       <section id="one">
         <div class="inner">
           <header class="major">
@@ -22,22 +22,33 @@
           <div id="content">
             {{ .Content }}
           </div>
+
+          {{ "<!-- Technologies -->" | safeHTML}}
+          {{ if .Params.listTechnologies }}
           <div id="technologies">
-            {{ "<!-- Technologies -->" | safeHTML}}
-            {{ if .Params.listTechnologies }}
             <p>Technologies that I have used...</p>
-            <ul style="list-style: none">
-              {{ range $j := $.Site.Params.technologies }}
-              <li>
-                <div style="display: inline;margin-right: 10px;">
-                  {{ partial "technology.html" $j }}
-                </div>
-                <span style="">{{ $j.name }}</span>
-              </li>
-              {{ end }}
-            </ul>
-            {{ end }}
+			<div class="row">
+              <div class="4u">
+                <ul style="list-style: none">
+                  {{ range $j := $.Site.Params.technologies }}
+                  <li>
+                    <div style="display: inline;margin-right: 10px;">
+                      {{ partial "technology.html" $j }}
+                    </div>
+                    <span style="white-space: nowrap; display: inline-block; width: 100px;">{{ $j.name }}</span>
+                  </li>
+                  {{ if eq $j.last_in_column true }}
+                </ul>
+              </div>
+              <div class="4u">
+                <ul style="list-style: none">
+                  {{ end }}
+                  {{ end }}
+                </ul>
+              </div>
+            </div>
           </div>
+          {{ end }}
         </div>
       </section>
     </div>
