+ added school projects page and personal projects page that list corresponding projects * tiles template now deduces image from project name, subtitle is now in project frontmatter and params.showcase in config is now an array of urls + content/page/_index.md to disable list page for content in page folder - removed slug everywhere as it wasn't different from default anywhere * estimated date per project to assure correct order on school projects page and personal projects page * corrected wrong year 2016 on Barock Battles page to 2017 * changed download link for Barock Battles to global gamejam page instead of directly to download that is on also on the global gamejam page + in navigation bar current page is now not a link and is a different color from every other element * download button on project page now checks for : instead of / to distinguish between a local file to download and a url to an external site to redirect to * fixed missing "<!DOCTYPE HTML>" on list page causing incorrect appearance of MAARTEN in bottom left

--- a/site/layouts/partials/project.html
+++ b/site/layouts/partials/project.html
@@ -17,9 +17,9 @@
           <div class="intro">
             <!-- Title -->
             {{ $imagefolder_path := printf "img%s" $.RelPermalink }}
-			{{ $imagefolder_url := printf "%s/%s" .Site.BaseURL $imagefolder_path }}
+            {{ $imagefolder_url := printf "%s/%s" .Site.BaseURL $imagefolder_path }}
             {{ $videofolder_path := printf "vid%s" $.RelPermalink }}
-			{{ $videofolder_url := printf "%s/%s" .Site.BaseURL $videofolder_path }}
+            {{ $videofolder_url := printf "%s/%s" .Site.BaseURL $videofolder_path }}
             {{ if fileExists (printf "static/%slogo.png" $imagefolder_path) }}
             <div class="row">
               <div class="12u" id="logo">
@@ -99,7 +99,8 @@
               <div class="4u$ 12u$(small)">
                 <ul class="actions vertical">
                   <li>
-                    <a href="{{ .Params.download }}" class="button big icon fa-download" {{ if (not (strings.Contains .Params.download "/")) }}download{{ end }}>Download</a>
+                    <!-- below assumes that external URL contains ":" (e.g. "http:" or "https:") -->
+                    <a href="{{ .Params.download }}" class="button big icon fa-download" {{ if (not (strings.Contains .Params.download ":")) }}download{{ end }}>Download</a>
                   </li>
                 </ul>
               </div>
