--- a/site/layouts/index.html
+++ b/site/layouts/index.html
@@ -15,9 +15,22 @@
 		{{ "<!-- Main -->" | safeHTML }}
 		<div id="main">
 
-			{{ if .Site.Params.Tiles.enable }}
-			{{ partial "tile.html" . }}
-			{{ end }}
+			<section id="one" class="tiles">
+				{{ range .Site.Params.Tiles.showcase }}
+				{{ $showcase_page := site.GetPage (printf "%s%s" "/" .) }}
+				{{ partial "tile.html" $showcase_page }}
+				{{ end }}
+				<article>
+					<!-- NOTE: keep this as the last element so that it doesn't look weird -->
+					<header class="major" style="min-width: max-content;">
+						<h3>A "new" project</h3>
+						<p>contact me?</p>
+					</header>
+					<div style="position: relative;height: 100%;right: 0;">
+						<img style="position: absolute;bottom: 0;" src="{{ .Site.Params.baseURL }}img/arrow.png" alt="" />
+					</div>
+				</article>
+			</section>
 
 		</div>
 
@@ -35,6 +48,27 @@
 
 	{{ "<!-- Scripts -->" | safeHTML}}
 	{{ partial "js.html" . }}
+	
+	<style>
+		/* last-child = "Your Project" box */
+		.tiles article:last-child header {
+			margin-right: 0;
+		}
+		.tiles article:last-child img {
+			margin-right: auto;
+			height: 50%;
+			max-height: 128px;
+		}
+		.tiles article:last-child:before {
+			background-color: transparent;
+
+		}
+		@media screen and (min-width: 481px) and (max-width: 736px) {
+			.tiles article:last-child img {
+				left: -2em;
+			}
+		}
+	</style>
 
 </body>
 
