--- a/site/layouts/partials/tile.html
+++ b/site/layouts/partials/tile.html
@@ -1,24 +1,11 @@
-{{ "<!-- Header -->" | safeHTML }}
-<section id="one" class="tiles">
-  {{ range .Site.Params.Tiles.showcase }}
-  <article>
-    <span class="image">
-      <img src="{{ .Site.Params.baseURL }}img/{{ .image }}" alt="" />
-    </span>
-    <header class="major">
-      <h3><a href="{{ .url | absURL }}" class="link">{{ .title }}</a></h3>
-      <p>{{ .subtitle }}</p>
-    </header>
-  </article>
-  {{ end }}
-  <article>
-    <!-- NOTE: keep this as the last element so that it doesn't look weird -->
-    <header class="major" style="min-width: max-content;">
-      <h3>A "new" project</h3>
-      <p>contact me?</p>
-    </header>
-    <div style="position: relative;height: 100%;right: 0;">
-      <img style="position: absolute;bottom: 0;" src="{{ .Site.Params.baseURL }}img/arrow.png" alt="" />
-    </div>
-  </article>
-</section>
+<article>
+<span class="image">
+	<!-- starting with "/" means absolute path -->
+	<img src="/img{{ strings.TrimSuffix "/" .RelPermalink }}.jpg" alt="" />
+</span>
+<header class="major">
+	<!-- tested and .RelPermalink is an absolute path but without the hugo base url -->
+	<h3><a href="{{ .RelPermalink }}" class="link">{{ .Title }}</a></h3>
+	<p>{{ .Params.subtitle }}</p>
+</header>
+</article>
