--- a/site/layouts/partials/projectlist.html
+++ b/site/layouts/partials/projectlist.html
@@ -14,7 +14,7 @@
         {{ "<!-- Main -->" | safeHTML }}
             <div id="main">
 
-                <section id="banner" class="style2">
+                <section id="banner">
                     <div class="inner">
                         <span class="image">
                             <img src="/img/{{ .Params.image }}" alt="" />
