--- a/site/layouts/partials/technology.html
+++ b/site/layouts/partials/technology.html
@@ -7,5 +7,5 @@
   {{ $pixelated = true }}
   {{ end }}
   {{ end }}
-  <img src="{{ $.Site.BaseURL }}{{ .image }}" alt="" style="height: 64px;{{ if $pixelated }}image-rendering: pixelated{{ end }}">
+  <img src="{{ $.Site.BaseURL }}{{ .image }}" alt="" style="width: 64px;{{ if $pixelated }}image-rendering: pixelated{{ end }}">
 </a>
