Added Minecraft hidden campfire 2013 project Added game development history to portfolio with Minecon 2012 photo Added other technologies in config.toml which now includes Minecraft redstone

--- a/site/layouts/partials/project.html
+++ b/site/layouts/partials/project.html
@@ -75,7 +75,7 @@
                 <div>
                   <h4>What I used</h4>
                   {{ range $i := .Params.tools }}
-                  {{ range $j := $.Site.Params.technologies }}
+                  {{ range $j := $.Site.Params.technologies | append $.Site.Params.other_technologies }}
                   {{ if eq $i $j.name}}
                   <div style="display:inline;margin-right: 10px;">
                     {{ partial "technology.html" $j }}
